[package]
name = "client"
version = "0.1.0"
authors = ["Andrew Osheroff <andrewosh@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.5"
oasis-game-core = "0.9.0"
oasis-game-client-proxy = "0.9.0"
core = { path = "../game" }

[dependencies.wasm-bindgen]
version = "= 0.2.37"
features = ["serde-serialize"]

[profile.release]
opt-level = 'z'
incremental = false
lto = true
