[package]
name = "core"
version = "0.1.0"
authors = ["Andrew Osheroff <andrewosh@gmail.com>"]

[dependencies]
quick-error = "1.2.2"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
lazy_static = "1.1.0"
oasis-game-core = "0.9.0"
oasis-game-core-derive = "0.9.0"

[dependencies.rand]
version = "0.6.4"
features = ["wasm-bindgen"]

[lib]
crate-type = ["lib"]
